 * ACME errors and problems in challenge selection that point to configuration mistakes
   are now visible in the md-status handler.
 * Testsuite cleanup amd use of new md-status handler to verify progress.
 * IMPORTANT: upgrade behaviour changed. MDs that have not `MDCertificateAuthority` configured
   explicitly all get the new ACMEv2 default endpoint of Let's Encrypt. See README.md chapter
   about upgrading for the background of this.
 * Added chapter about the upcoming end-of-life changes for ACMEv1 at LetsEncrypt.
 * Extracting certificate transparency SCT (the signature from CT logs) from a staged
   certificate and displaying these on /.httpd/certificate-status. A monitoring client 
   may use this to verify the signatures against the CT logs, even though the log may not
   yet show the certificate (maximum merge delay seems to be at 24 hours on most logs). 

v2.0.2
----------------------------------------------------------------------------------------------------
 * Fixing configuration startup (e.g. dry run) to sync with the store again. This let's
   us find renamed MDs and use its correct paths. With wrong paths, mod_ssl gets unhappy
   and logs errors (see #125).
 * Adding an experimental "check" column to server-status with links to known certificate
   checker sites.
 * Certificate validity now appears as "valid-from"/"valid-until" pair.
 * Adding SHA256 fingerprint to certificate-status for renewed certificate.
 * md-status handler fixed to work on nested path locations as well.

v2.0.1
----------------------------------------------------------------------------------------------------
 * New handler "md-status" that can be configured to return the state of all MDs in JSON format.
 * Append the name or domain of an MD to the "md-status" url path and get the JSON of just
   that MD.

v2.0.0
----------------------------------------------------------------------------------------------------